kubernetes/apps/default/frigate/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate-network-application
spec:
  ingressClassName: internal
  rules:
    - host: &host frigate.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate-network-application
                port:
                  number: 443
  tls:
    - hosts:
        - *host
